# compression-text-models

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
configs/distillation/: distilbert-base-cased.json
configs/layer-extraction/: default-config.json
configs/model-extraction/: default-config.json
data/: README.md
notebooks/: 000-brwac-dataset-raw-to-processed.ipynb  001-dataset-eda.ipynb  001-train-notebook.ipynb  002-brwac-processed-to-text.ipynb  002-check-distil-script-results.ipynb  003-check-custom-distil-script-result.ipynb  010-extracting-logits-from-dataset.ipynb  011-torch-lightning-logits-extraction.ipynb
scripts/distil/: binarized-data.py
scripts/layer-extraction/: bert-to-distilbert.py
scripts/preprocessing/: brwac-processed-to-txt.py  brwac-raw-to-processed.py  brwac-raw-to-txt.py  processed-to-training-input.py
src/distillation/: lm_seqs_dataset.py  train.py
src/fastdistillation/: distiller.py  lm_seqs_dataset.py  train_model.py
