[tool.poetry]
name = "compression-text-models"
version = "0.1.0"
description = ""
authors = ["Mikael souza"]

[tool.poetry.dependencies]
python = "^3.8"
torch = "^1.11.0"
datasets = "^2.0.0"
pytorch-lightning = "^1.6.0"
pandas = "^1.4.1"
numpy = "^1.22.3"
transformers = "^4.17.0"
wandb = "^0.13.1"

[tool.poetry.dev-dependencies]
jupyter = "^1.0.0"
black = "^22.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
